@@ -273,17 +273,22 @@ Low-level distribution functions
 
     DistFunc_dBinomial
     DistFunc_dHypergeometric
+    DistFunc_dNonCentralChiSquare
+    DistFunc_dNonCentralStudent
     DistFunc_dPoisson
+    DistFunc_eZ1
+    DistFunc_kFactor
+    DistFunc_kFactorPooled
     DistFunc_logdBinomial
     DistFunc_logdHypergeometric
     DistFunc_logdPoisson
     DistFunc_pHypergeometric
+    DistFunc_pPearsonCorrelation
     DistFunc_pNormal
     DistFunc_qNormal
     DistFunc_rBinomial
+    DistFunc_rDiscrete
     DistFunc_rHypergeometric
     DistFunc_rNormal
     DistFunc_rPoisson
-    DistFunc_kFactor
-    DistFunc_kFactorPooled
 
