@@ -25,6 +25,7 @@
  * #1222 (There is no kriging example based on HMAT)
  * #1331 (FittingTest_BestModelBIC sometimes fail)
  * #1335 (The return of the unsafe ResourceMap)
+ * #1337 (The rDiscrete function has no help page)
  * #1351 (Text has a zero size)
  * #1354 (The doc of GeneralizedParetoFactory does not reflect the implementation)
 
